Removed good placeholder in searchbox

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <br>
     <br>
     <form action="https://google.com/search">
-      <input type="text" name="q" class="searchbar" placeholder="Google search" autofocus>
+      <input type="text" name="q" class="searchbar" autofocus>
     </form>
     <div class="decoration">
       <img class="footer" src="img/footer.png" alt="footer">
